Adding handlers logic
