# src/controllers/getAverageClicks/handler.js
@@ -2,17 +2,35 @@
 
 const logger = require('../../logger');
 const error = require('../../errors');
-const datastore = require('../../database');
+const database = require('../../database');
+const { databaseTableName } = require('../../constants');
 
 module.exports = async (req, res) => {
   const {
-    params: { 'user-uuid': userUuid },
+    params: { uuid },
     query: { timePeriod },
-    metadata: { reqId },
-    headers: { authorization }
+    metadata: { reqId }
   } = req;
 
-  // TODO: read from DB
+  logger.debug({ message: 'Reading the data from database', id: reqId });
+  let averageClicks = 0;
+  try {
+    const data = await database.get({ tableName: databaseTableName, key: uuid });
+    let totalClicks = 0;
+    let totalTimespent = 0;
+    for (let clickData of Object.values(data)) {
+      totalClicks += clickData.clicks;
+      totalTimespent += clickData.timespent;
+    }
 
-  res.status(200).end();
+    if (totalTimespent !== 0) {
+      averageClicks = ((timePeriod * totalClicks) / totalTimespent);
+    }
+  } catch (err) {
+    throw new error.InternalServerError({ message: err.message });
+  }
+
+  res.status(200).json({
+    count: averageClicks
+  });
 };
